# capitalhumano2

./: Import_cv.py  _apaga banco.py  _teste banco.py  ai.py  creat_job.py  credentials.json  db.json  download_cv.py  pyproject.toml  requirements.txt  token.json
